creusot/tests/should_fail/bug/01_resolve_unsoundness.coma

module Core_Ptr_NonNull_NonNull_Type
  use prelude.prelude.Opaque
  
  type t_nonnull 't =
    | C_NonNull opaque_ptr
  
  function any_l (_ : 'b) : 'a
  
  let rec t_nonnull < 't > (input:t_nonnull 't) (ret  (pointer:opaque_ptr))= any
    [ good (pointer:opaque_ptr)-> {C_NonNull pointer = input} (! ret {pointer})
    | bad (pointer:opaque_ptr)-> {C_NonNull pointer <> input} {false} any ]
    
end
module Core_Marker_PhantomData_Type
  type t_phantomdata 't =
    | C_PhantomData
  
  function any_l (_ : 'b) : 'a
  
  let rec t_phantomdata < 't > (input:t_phantomdata 't) (ret  )= any
    [ good -> {C_PhantomData  = input} (! ret) | bad -> {C_PhantomData  <> input} {false} any ]
    
end
module Core_Ptr_Unique_Unique_Type
  use Core_Marker_PhantomData_Type as PhantomData'0
  
  use Core_Ptr_NonNull_NonNull_Type as NonNull'0
  
  type t_unique 't =
    | C_Unique (NonNull'0.t_nonnull 't) (PhantomData'0.t_phantomdata 't)
  
  function any_l (_ : 'b) : 'a
  
  let rec t_unique < 't > (input:t_unique 't) (ret  (pointer:NonNull'0.t_nonnull 't) (_marker:PhantomData'0.t_phantomdata 't))= any
    [ good (pointer:NonNull'0.t_nonnull 't) (_marker:PhantomData'0.t_phantomdata 't)-> {C_Unique pointer _marker
      = input}
      (! ret {pointer} {_marker})
    | bad (pointer:NonNull'0.t_nonnull 't) (_marker:PhantomData'0.t_phantomdata 't)-> {C_Unique pointer _marker
      <> input}
      {false}
      any ]
    
end
module Alloc_RawVec_Cap_Type
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  type t_cap  =
    | C_Cap usize
  
  function any_l (_ : 'b) : 'a
  
  let rec t_cap (input:t_cap) (ret  (field_0:usize))= any
    [ good (field_0:usize)-> {C_Cap field_0 = input} (! ret {field_0})
    | bad (field_0:usize)-> {C_Cap field_0 <> input} {false} any ]
    
end
module Alloc_RawVec_RawVec_Type
  use Alloc_RawVec_Cap_Type as Cap'0
  
  use Core_Ptr_Unique_Unique_Type as Unique'0
  
  type t_rawvec 't 'a =
    | C_RawVec (Unique'0.t_unique 't) (Cap'0.t_cap) 'a
  
  function any_l (_ : 'b) : 'a
  
  let rec t_rawvec < 't > < 'a > (input:t_rawvec 't 'a) (ret  (ptr:Unique'0.t_unique 't) (cap:Cap'0.t_cap) (alloc:'a))= any
    [ good (ptr:Unique'0.t_unique 't) (cap:Cap'0.t_cap) (alloc:'a)-> {C_RawVec ptr cap alloc = input}
      (! ret {ptr} {cap} {alloc})
    | bad (ptr:Unique'0.t_unique 't) (cap:Cap'0.t_cap) (alloc:'a)-> {C_RawVec ptr cap alloc <> input} {false} any ]
    
end
module Alloc_Vec_Vec_Type
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  use Alloc_RawVec_RawVec_Type as RawVec'0
  
  type t_vec 't 'a =
    | C_Vec (RawVec'0.t_rawvec 't 'a) usize
  
  function any_l (_ : 'b) : 'a
  
  let rec t_vec < 't > < 'a > (input:t_vec 't 'a) (ret  (buf:RawVec'0.t_rawvec 't 'a) (len:usize))= any
    [ good (buf:RawVec'0.t_rawvec 't 'a) (len:usize)-> {C_Vec buf len = input} (! ret {buf} {len})
    | bad (buf:RawVec'0.t_rawvec 't 'a) (len:usize)-> {C_Vec buf len <> input} {false} any ]
    
end
module Alloc_Alloc_Global_Type
  type t_global  =
    | C_Global
  
  function any_l (_ : 'b) : 'a
  
  let rec t_global (input:t_global) (ret  )= any
    [ good -> {C_Global  = input} (! ret) | bad -> {C_Global  <> input} {false} any ]
    
end
module C01ResolveUnsoundness_MakeVecOfSize
  let%span s01_resolve_unsoundness0 = "../01_resolve_unsoundness.rs" 10 29 10 39
  
  let%span s01_resolve_unsoundness1 = "../01_resolve_unsoundness.rs" 11 16 11 17
  
  let%span s01_resolve_unsoundness2 = "../01_resolve_unsoundness.rs" 12 16 12 37
  
  let%span s01_resolve_unsoundness3 = "../01_resolve_unsoundness.rs" 14 17 14 22
  
  let%span s01_resolve_unsoundness4 = "../01_resolve_unsoundness.rs" 15 13 15 14
  
  let%span s01_resolve_unsoundness5 = "../01_resolve_unsoundness.rs" 8 10 8 29
  
  let%span span6 = "../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12
  
  let%span span7 = "" 0 0 0 0
  
  let%span span8 = "../../../../../creusot-contracts/src/std/vec.rs" 19 21 19 25
  
  let%span span9 = "../../../../../creusot-contracts/src/std/vec.rs" 18 14 18 41
  
  let%span span10 = "../../../../../creusot-contracts/src/std/vec.rs" 19 4 19 36
  
  let%span span11 = "../../../../../creusot-contracts/src/std/vec.rs" 60 20 60 41
  
  let%span span12 = "../../../../../creusot-contracts/src/model.rs" 108 8 108 31
  
  let%span span13 = "" 0 0 0 0
  
  let%span span14 = "" 0 0 0 0
  
  let%span span15 = "../../../../../creusot-contracts/src/std/vec.rs" 82 26 82 51
  
  let%span span16 = "../../../../../creusot-contracts/src/std/vec.rs" 69 26 69 44
  
  let%span span17 = "" 0 0 0 0
  
  use seq.Seq
  
  predicate invariant'3 (self : Seq.seq bool) =
    [%#span6] true
  
  predicate inv'3 (_x : Seq.seq bool)
  
  axiom inv'3 : forall x : Seq.seq bool . inv'3 x = true
  
  predicate invariant'2 (self : bool) =
    [%#span6] true
  
  predicate inv'2 (_x : bool)
  
  axiom inv'2 : forall x : bool . inv'2 x = true
  
  use Alloc_Alloc_Global_Type as Global'0
  
  use Alloc_Vec_Vec_Type as Vec'0
  
  use prelude.prelude.Borrow
  
  predicate invariant'1 (self : borrowed (Vec'0.t_vec bool (Global'0.t_global))) =
    [%#span6] true
  
  predicate inv'1 (_x : borrowed (Vec'0.t_vec bool (Global'0.t_global)))
  
  axiom inv'1 : forall x : borrowed (Vec'0.t_vec bool (Global'0.t_global)) . inv'1 x = true
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.UIntSize
  
  use prelude.prelude.Int
  
  constant max'0 : usize = [%#span7] (18446744073709551615 : usize)
  
  use seq.Seq
  
  predicate inv'0 (_x : Vec'0.t_vec bool (Global'0.t_global))
  
  function shallow_model'0 (self : Vec'0.t_vec bool (Global'0.t_global)) : Seq.seq bool
  
  axiom shallow_model'0_spec : forall self : Vec'0.t_vec bool (Global'0.t_global) . ([%#span8] inv'0 self)
   -> ([%#span10] inv'3 (shallow_model'0 self))
  && ([%#span9] Seq.length (shallow_model'0 self) <= UIntSize.to_int (max'0 : usize))
  
  predicate invariant'0 (self : Vec'0.t_vec bool (Global'0.t_global)) =
    [%#span11] inv'3 (shallow_model'0 self)
  
  axiom inv'0 : forall x : Vec'0.t_vec bool (Global'0.t_global) . inv'0 x = true
  
  use prelude.prelude.Intrinsic
  
  use seq.Seq
  
  function shallow_model'1 (self : borrowed (Vec'0.t_vec bool (Global'0.t_global))) : Seq.seq bool =
    [%#span12] shallow_model'0 ( * self)
  
  let rec push'0 (self:borrowed (Vec'0.t_vec bool (Global'0.t_global))) (value:bool) (return'  (ret:()))= {[@expl:precondition] [%#span14] inv'2 value}
    {[@expl:precondition] [%#span13] inv'1 self}
    any
    [ return' (result:())-> {[%#span15] shallow_model'0 ( ^ self) = Seq.snoc (shallow_model'1 self) value}
      (! return' {result}) ]
    
  
  let rec new'0 (_1:()) (return'  (ret:Vec'0.t_vec bool (Global'0.t_global)))= any
    [ return' (result:Vec'0.t_vec bool (Global'0.t_global))-> {[%#span17] inv'0 result}
      {[%#span16] Seq.length (shallow_model'0 result) = 0}
      (! return' {result}) ]
    
  
  let rec make_vec_of_size (n:usize) (return'  (ret:Vec'0.t_vec bool (Global'0.t_global)))= (! bb0
    [ bb0 = s0
      [ s0 = new'0 {[%#s01_resolve_unsoundness0] ()}
          (fun (_ret':Vec'0.t_vec bool (Global'0.t_global)) ->  [ &out <- _ret' ] s1)
      | s1 = bb1 ]
      
    | bb1 = s0 [ s0 =  [ &i <- [%#s01_resolve_unsoundness1] (0 : usize) ] s1 | s1 = bb2 ] 
    | bb2 = bb2
      [ bb2 = {[@expl:loop invariant] [%#s01_resolve_unsoundness2] (0 : usize) <= i /\ i <= n}
        (! s0) [ s0 = bb3 ] 
        [ bb3 = s0
          [ s0 = UIntSize.le {i} {n} (fun (_ret':bool) ->  [ &_9 <- _ret' ] s1)
          | s1 = any [ br0 -> {_9 = false} (! bb6) | br1 -> {_9} (! bb4) ]  ]
          
        | bb4 = s0
          [ s0 = Borrow.borrow_mut <Vec'0.t_vec bool (Global'0.t_global)> {out}
              (fun (_ret':borrowed (Vec'0.t_vec bool (Global'0.t_global))) ->  [ &_13 <- _ret' ]  [ &out <-  ^ _13 ] s1)
          | s1 = push'0 {_13} {[%#s01_resolve_unsoundness3] false} (fun (_ret':()) ->  [ &_12 <- _ret' ] s2)
          | s2 = bb5 ]
          
        | bb5 = s0
          [ s0 = UIntSize.add {i} {[%#s01_resolve_unsoundness4] (1 : usize)} (fun (_ret':usize) ->  [ &i <- _ret' ] s1)
          | s1 = bb2 ]
           ]
         ]
      
    | bb6 = s0
      [ s0 =  [ &_0 <- out ] (any [ any_ (_any:Vec'0.t_vec bool (Global'0.t_global))-> (!  [ &out <- _any ] s1) ] )
      | s1 = bb7 ]
      
    | bb7 = return' {_0} ]
    )
    [ & _0 : Vec'0.t_vec bool (Global'0.t_global) = any_l ()
    | & n : usize = n
    | & out : Vec'0.t_vec bool (Global'0.t_global) = any_l ()
    | & i : usize = any_l ()
    | & _9 : bool = any_l ()
    | & _12 : () = any_l ()
    | & _13 : borrowed (Vec'0.t_vec bool (Global'0.t_global)) = any_l () ]
    
    [ return' (result:Vec'0.t_vec bool (Global'0.t_global))-> {[@expl:postcondition] [%#s01_resolve_unsoundness5] Seq.length (shallow_model'0 result)
      = UIntSize.to_int n}
      (! return' {result}) ]
    
end
